TS-2269 regex_remap plugin does not deal with empty path's properly.

This is a problem when the request URL path is just '/', which inside
of ATS is an emptry string.

Review: leif